@@ -1,3 +1,7 @@
+1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* acinstall.m4: New file.
+
 1998-08-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* actcltk.m4 (md_FIND_BLT): Loop over BLT, BLT8.0 and BLT80
